# testShuhe

./: few_shot_evaluation.py  few_shot_resnet12_vits.py  pyproject.toml  run.sh  utils.py
temp/: args.py  backbones2.py
