[project]
name = "testshuhe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hostlist>=1.4.8",
    "ptflops>=0.7.5",
    "scipy>1.6.1",
    "thop>=0.1.1.post2209072238",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchinfo>=1.8.0",
    "torchprofile>=0.0.4",
    "torchvision>=0.23.0",
    "trt-engine-explorer>=0.1.5",
]
